Created raft log

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ subprojects {
 
     dependencies {
         testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2' // Use the latest version
+
     }
 
     tasks.withType(Test).configureEach {
