--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ subprojects {
     dependencies {
         testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2' // Use the latest version
+        testImplementation 'org.awaitility:awaitility:4.2.0'
 
     }
 
